--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header{
+  text-align: center;
+}
+
+.flex-row{
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.item { 
+  flex: 0 50%;
+}
